--- a/e2e/datachannel/multi-channel.html
+++ b/e2e/datachannel/multi-channel.html
@@ -11,6 +11,6 @@
 		<div id="status">Waiting for initialization...</div>
 		<div id="messages"></div>
 		<div id="channel-info"></div>
-		<script src="/dist/peerjs.min.js" type="application/javascript"></script>
+		<script src="/dist/linkt.min.js" type="application/javascript"></script>
 	</body>
 </html>
