--- a/e2e/datachannel/serialization.html
+++ b/e2e/datachannel/serialization.html
@@ -17,7 +17,7 @@
 		<div id="messages"></div>
 		<div id="result"></div>
 		<div id="error-message"></div>
-		<script src="/dist/peerjs.min.js" type="application/javascript"></script>
+		<script src="/dist/linkt.min.js" type="application/javascript"></script>
 		<script src="serialization.js" type="module"></script>
 	</body>
 </html>
