--- a/e2e/peer/id-taken.html
+++ b/e2e/peer/id-taken.html
@@ -10,12 +10,9 @@
 		<h1>ID-TAKEN</h1>
 		<div id="messages"></div>
 		<div id="error-message"></div>
-		<script src="/dist/peerjs.js"></script>
+		<script src="/dist/linkt.js"></script>
 		<script type="application/javascript">
-			/**
-			 * @type {typeof import("../..").Peer}
-			 */
-			const Peer = window.peerjs.Peer;
+			const MeshClient = window.linkt.MeshClient;
 
 			const params = new URLSearchParams(document.location.search);
 
@@ -23,7 +20,7 @@
 			const errorMessage = document.getElementById("error-message");
 
 			// Peer A should be created without an error
-			const peerA = new Peer({ key: params.get("key") })
+			const peerA = new MeshClient({ key: params.get("key") })
 				.once(
 					"error",
 					(err) => (errorMessage.textContent += JSON.stringify(err)),
@@ -34,7 +31,7 @@
 						{ length: 10 },
 						(_, i) =>
 							new Promise((resolve, reject) =>
-								new Peer(id, { key: params.get("BYPASS_WAF") })
+								new MeshClient(id, { key: params.get("BYPASS_WAF") })
 									.once("open", () =>
 										reject(`Peer ${i} failed! Connection got established.`),
 									)
