--- a/e2e/peer/id-taken.html
+++ b/e2e/peer/id-taken.html
@@ -10,9 +10,9 @@
 		<h1>ID-TAKEN</h1>
 		<div id="messages"></div>
 		<div id="error-message"></div>
-		<script src="/dist/linkt.js"></script>
+		<script src="/build/linkt.js"></script>
 		<script type="application/javascript">
-			const MeshClient = window.linkt.MeshClient;
+			const MeshClient = window.Linkt.MeshClient;
 
 			const params = new URLSearchParams(document.location.search);
 
