--- a/e2e/peer/server-unavailable.html
+++ b/e2e/peer/server-unavailable.html
@@ -10,9 +10,9 @@
 		<h1>ID-TAKEN</h1>
 		<div id="messages"></div>
 		<div id="error-message"></div>
-		<script src="/dist/linkt.js"></script>
+		<script src="/build/linkt.js"></script>
 		<script type="application/javascript">
-			const MeshClient = window.linkt.MeshClient;
+			const MeshClient = window.Linkt.MeshClient;
 
 			const messages = document.getElementById("messages");
 			const errorMessage = document.getElementById("error-message");
